--- a/ProsolsMachineTest/app/src/main/res/layout/activity_main.xml
+++ b/ProsolsMachineTest/app/src/main/res/layout/activity_main.xml
@@ -64,4 +64,9 @@
         android:text="Delete"
         >
     </Button>
+
+    <TextView
+        android:id="@+id/txtTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></TextView>
 </LinearLayout>
